--- a/app/src/main/res/layout/exp1_gui.xml
+++ b/app/src/main/res/layout/exp1_gui.xml
@@ -26,6 +26,11 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:text="Button" />
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:text="next experiment" />
 
 
 </LinearLayout>
